edit hist.jpg and added sync child process

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <h3>
         <p>This webpage convert your image and generate its histogram</p>
     </h3>
-    <form id="form1" method="POST" action="upload" enctype="multipart/form-data">   <!--enctype needed--!>
+    <form id="form1" method="POST" action="upload" enctype="multipart/form-data">   <!--enctype needed-->
       <input type='file' name='img' id="imgInp" />
       <img height = 500 width=500 id="blah" src="#" alt="your image" />
       <input type='submit' value="upload">
